fix(SelectSignerAccountModal): overflow

--- a/src/components/Modals/SelectSignerAccountModal/SelectSignerAccountModal.scss
+++ b/src/components/Modals/SelectSignerAccountModal/SelectSignerAccountModal.scss
@@ -1,6 +1,7 @@
 @import '../../../variables.scss';
 
 #select-signer-modal {
+  height: 690px;
   display: flex;
   flex-direction: column;
   gap: 30px;
